fix: profile__description overflow

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,13 +1,18 @@
 .profile__description {
   grid-area: desc;
+  max-width: 500px;
   margin: 0;
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 @media (max-width: 541px) {
   .profile__description {
     justify-self: center;
+    max-width: 200px;
     font-size: 14px;
     line-height: 17px;
   }
